--- a/3ZWT-WOTBWIKI/.github/workflows/deploy.yml
+++ b/3ZWT-WOTBWIKI/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy MkDocs Site to Pages
 on:
   push:
     branches:
-      - main # 或者 master
+      - main # Or master, depending on your branch name
 
 jobs:
   deploy:
